--- a/render.yaml
+++ b/render.yaml
@@ -19,17 +19,12 @@ services:
         sync: false
     
   # Frontend Static Site
-  - type: static
+  - type: web
     name: online-bookstore-frontend
     env: static
     plan: free
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: frontend/dist
     envVars:
       - key: VITE_API_URL
         value: https://online-bookstore-api.onrender.com/api
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
