--- a/render.yaml
+++ b/render.yaml
@@ -22,8 +22,9 @@ services:
   - type: web
     name: online-bookstore-frontend
     env: static
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: frontend/dist
+    rootDir: frontend
+    buildCommand: npm install && npm run build
+    staticPublishPath: dist
     envVars:
       - key: VITE_API_URL
         value: https://online-book-store-l1tc.onrender.com/api
