--- a/render.yaml
+++ b/render.yaml
@@ -22,9 +22,8 @@ services:
   - type: web
     name: online-bookstore-frontend
     env: static
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    staticPublishPath: dist
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: frontend/dist
     envVars:
       - key: VITE_API_URL
         value: https://online-book-store-l1tc.onrender.com/api
