--- a/render.yaml
+++ b/render.yaml
@@ -22,7 +22,7 @@ services:
   - type: web
     name: online-bookstore-frontend
     env: static
-    buildCommand: cd frontend && npm install && npm run build
+    buildCommand: npm --prefix frontend install && npm --prefix frontend run build
     staticPublishPath: frontend/dist
     envVars:
       - key: VITE_API_URL
